--- a/src/app/components/wyswietl-osobe/wyswietl-osobe.component.html
+++ b/src/app/components/wyswietl-osobe/wyswietl-osobe.component.html
@@ -1,7 +1,7 @@
 <h3>Wyświetl osoby:</h3>
 <ul *ngIf="osoby?.length > 0">
     <li *ngFor="let osoba of osoby">
-        {{ osoba }}
+        <span>{{ osoba }} </span><button class="btn btn-warning btn-sm" (click)="onRemove(osoba)">Usuń</button>
     </li>
 </ul>
 <br>
