--- a/src/app/components/wyswietl-osobe/wyswietl-osobe.component.html
+++ b/src/app/components/wyswietl-osobe/wyswietl-osobe.component.html
@@ -4,7 +4,7 @@
         <span>{{ osoba }} </span>
         <div class="btn-group" role="group" aria-label="Operacje">
             <button class="btn btn-danger btn-sm" (click)="onRemove(osoba)">Usuń</button>
-            <button class="btn btn-warning btn-sm">Odrzuć</button>
+            <button class="btn btn-warning btn-sm" (click)="onDiscard(osoba)">Odrzuć</button>
         </div>
     </li>
 </ul>
