--- a/src/app/components/wybierz-osobe/wybierz-osobe.component.html
+++ b/src/app/components/wybierz-osobe/wybierz-osobe.component.html
@@ -2,9 +2,10 @@
     <h3>Wybierz osobę</h3>
     <ul *ngIf="osoby">
         <li *ngFor="let osoba of osoby">
-            <span>{{ osoba }} - </span>
+            <span>{{ osoba }}</span>
             <div class="btn-group" role="group" aria-label="Operacje">
-                <button class="btn btn-success btn-sm" (click)="onClick(osoba)">Wybierz</button>
+                <button class="btn btn-success btn-sm" (click)="onAdd(osoba)">Wybierz</button>
+                <button class="btn btn-danger btn-sm" (click)="onRemove(osoba)">Usuń</button>
             </div>
         </li>
     </ul>
