add comments object json

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,15 +15,15 @@ hr {
 }
 
 .col {
-    margin: 4px;
-    padding: 12px;
+    margin: 6px;
+    padding: 8px;
     border: 2px solid #e43f5a;
     border-radius: 12px;
     background-color: #1b1b2f;
 }
 
 .col ul {
-    margin: 0px; padding: 0px; padding-left: 12px;
+    margin: 0px; padding: 0px; padding-left: 20px
 }
 
 .col li {
